tests/fail/elaboration/unification/mismatch/arrow-output-type.snap
stdout = ''
stderr = '''
error: mismatched types
  ┌─ tests/fail/elaboration/unification/mismatch/arrow-output-type.fathom:3:39
  │
3 │ fun (A : Type) -> fun (a : A) -> A -> a
  │                                       ^ type mismatch, expected `A`, found `Type`
  │
  = expected `A`
       found `Type`

'''
